--- a/style.css
+++ b/style.css
@@ -27,11 +27,12 @@ html,body {
 }
 
 #logo {
-    height: 70px;
+    height: 65px;
 }
 
 .lien_nul {
-    color: #abb8c3;
+    font-size: 14px;
+    color: rgba(255,255,255,0.54);
     text-decoration: none;
 }
 
@@ -41,7 +42,7 @@ html,body {
 
 #bouton_nul {
     border: none;
-    background-color: rgb(251, 105, 98);
+    background-color: #F7A292;
     transition: 1s;
     padding: 20px 50px;
 }
@@ -50,13 +51,10 @@ html,body {
     background-color: rgb(74, 234, 220);
 }
 
-#barre_blanc {
-    width: 100%;
-    height: 1px;
-}
 #titre{
     font-size: 50px;
     font-weight: normal;
+    margin: 0;
 }
 
 
@@ -77,19 +75,27 @@ main{
     width: 100%;
 }
 .section {
-    margin: 0% 25%;
+    margin: 0% 10%;
     padding-top: 296px;
     color:white;
 }
 .section button{
     color: white;
-    background-color: rgb(74, 234, 220);
     padding: 15px 30px;
+    background-color: #00a395;
+    border: none;
 }
+.section p{
+    color: rgba(255,255,255,0.54);
+    font-size: 20px;
+    
+}
+
 
 #logo2 {
     width: 80px;
 }
+
 
 #sect1 {
     background-image: linear-gradient(93deg, #2F2E2D 24%, rgba(41, 196, 169, 0) 100%), url("https://massage-theme.richardpruzek.com/wp-content/uploads/2020/02/massage26.jpg");
@@ -126,15 +132,45 @@ footer {
 
 #fin_page {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    border-bottom: 1px solid  rgba(255, 255, 255, 0.1);
+    color: rgba(255,255,255,0.54);
+}
+#fin_page h3{
+    color: white;
+    margin-bottom: 30px;
+    border-left: 5px solid #F7A292;
+    padding-left: 10px;
 }
 .ulbas{
-    margin:0 3%;
+    list-style: none;
 }
-#barrebas{
-    border-bottom: 1px solid  rgba(255, 255, 255, 0.1);
-}
+.ulbas li{
+    margin-bottom: 10px;
 
+}
+.ulbas a{
+    text-decoration: none;
+    color: rgba(255,255,255,0.54);
+    font-size: 18px;
+}
+.logobas{
+    width: 50px;
+    margin-right: 10px;
+}
+.contacts{
+    display: flex;
+    align-items: center;
+}
+#marginbot{
+    margin: 0 10%;
+}
+#trademark{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: rgba(255,255,255,0.54);
+}
 
 
 
