--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html,body {
     background-color: #F9F9F9;
     font-family: 'Montserrat', sans-serif;
     color: #000000;
+    scroll-behavior: smooth;
 }
 
 /* Header */
@@ -82,6 +83,10 @@ header.scrolled{
 .dropdown-menu a{
     text-decoration: none;
     color: black;
+    transition: .4s;
+}
+.dropdown-menu a:hover{
+    color: #f7a191;
 }
 .dropdown-menu li{
     margin-bottom: 20px;
@@ -171,7 +176,7 @@ color: #000000;
     height: 100%;
 }
 #services{
-    margin-top: 150px;
+    padding: 150px 0;
     text-align: center;
 }
 #txt{
@@ -179,10 +184,13 @@ color: #000000;
 }
 #txt2{
     font-size: 16px;
+    padding-bottom: 50px;
 }
 .txt3{
+    display: none;
     font-size: 14px;
 }
+
 #services h2{
     font-size: 40px;
 }
@@ -194,14 +202,23 @@ color: #000000;
 }
 #ourservices{
     display: flex;
+    margin: 0 10%;
 }
-
+.our_services{
+    margin-left: 10px;
+    color: white;
+}
+.our_services:hover .txt3{
+    display: block;
+}
 #massage{
     font-weight: 300;
     letter-spacing: 1px;
     background-image: linear-gradient(180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.51) 100%),url(https://massage-theme.richardpruzek.com/wp-content/uploads/2020/02/massage12.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;    
     padding-top: 280px;
-    padding-right: 30px;
+    padding-right: 60px;
     padding-bottom: 40px;
     padding-left: 30px;
 }
@@ -209,8 +226,10 @@ color: #000000;
     font-weight: 300;
     letter-spacing: 1px;
     background-image: linear-gradient(180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.51) 100%),url(https://massage-theme.richardpruzek.com/wp-content/uploads/2020/02/massage33.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     padding-top: 280px;
-    padding-right: 30px;
+    padding-right: 60px;
     padding-bottom: 40px;
     padding-left: 30px;
 }
@@ -218,8 +237,10 @@ color: #000000;
     font-weight: 300;
     letter-spacing: 1px;
     background-image: linear-gradient(180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.51) 100%),url(https://massage-theme.richardpruzek.com/wp-content/uploads/2020/02/massage32.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;    
     padding-top: 280px;
-    padding-right: 30px;
+    padding-right: 60px;
     padding-bottom: 40px;
     padding-left: 30px;
 }
@@ -227,7 +248,7 @@ color: #000000;
 #blog_tease{
     display: flex;
     justify-content: center;
-    margin: 100px 0;
+    padding: 200px 0;  
 
 }
 .cartes{
@@ -250,6 +271,9 @@ color: #000000;
     border: none;
     background-color: #F7A292;
 }
+.cartes button:hover{
+    background-color: #00a395;
+}
 .richard{
     color: #F7A292;
 }
@@ -259,8 +283,15 @@ color: #000000;
 }
 
 #artcenter{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     text-align: left;
     margin: 0 20%;
+    padding: 100px 0;
+}
+#artcenter small{
+    text-align: right;
 }
 #artcenter img{
     border: 10px solid white;
@@ -611,6 +642,13 @@ footer {
     width: 44px;
     height: 44px;
     text-align: center;
+    color: white;
+}
+#iconenbas a:hover{
+    border: 1px solid #00a395;
+}
+#iconenbas a:hover i{
+    color: #00a395;
 }
 
 
